--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Pavan</h1>
+    <h1 style="color:red">Hello Pavan</h1>
 </body>
 </html>
